# VulkanGin

./: CMakeLists.txt  CMakeSettings.json  README.md
Project/: CMakeLists.txt  GP2Buffer.cpp  GP2Buffer.h  GP2CommandBuffer.cpp  GP2CommandBuffer.h  GP2CommandManager.cpp  GP2CommandManager.h  GP2CommandPool.cpp  GP2CommandPool.h  GP2GraphicsPipeline2D.cpp  GP2GraphicsPipeline2D.h  GP2IndexBuffer.cpp  GP2IndexBuffer.h  GP2Mesh.cpp  GP2Mesh.h  GP2Shader.cpp  GP2Shader.h  GP2VertexBuffer.cpp  GP2VertexBuffer.h  Vxl_Window.cpp  Vxl_Window.h  main.cpp  stb_image.h  vxl_Block.cpp  vxl_Block.h  vxl_Camera.cpp  vxl_Camera.h  vxl_Chunk.cpp  vxl_Chunk.h  vxl_Device.cpp  vxl_Device.h  vxl_GraphicsPipeline.cpp  vxl_GraphicsPipeline.h  vxl_GraphicsPipeline3D.cpp  vxl_GraphicsPipeline3D.h  vxl_Model.cpp  vxl_Model.h  vxl_Model3D.cpp  vxl_Model3D.h  vxl_SwapChain.cpp  (+11 more)
Project/labwork/: Week01.cpp  Week02.cpp  Week03.cpp  Week04.cpp  Week05.cpp  Week06.cpp
Project/shaders/: flatShading.frag  flatShading.vert  shader.frag  shader.vert  simple_shader.frag  simple_shader.vert  simple_shader3D.frag  simple_shader3D.vert
Project/vulkanbase/: VulkanBase.cpp  VulkanBase.h  VulkanUtil.cpp  VulkanUtil.h
WIP/: Implementing_Textures_FirstTry.rdc  Implementing_Textures_FirstTry_1.rdc  Implementing_Textures_FirstTry_2.rdc
